--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
@@ -24,8 +25,12 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@pinia/testing": "^1.0.2",
     "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-vue": "^6.0.0",
-    "vite": "^7.0.4"
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^18.0.1",
+    "vite": "^7.0.4",
+    "vitest": "^3.2.4"
   }
 }
